Adds Babel transform

--- a/eloquent-javascript.html
+++ b/eloquent-javascript.html
@@ -3,10 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Base HTML5 Site</title>
-    <meta name="description" content="Content Description">
-    <meta name="author" content="Your name">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <title>Eloquent JavaScript Exercises</title>
+    <meta name="description" content="Exercises from the Eloquent JavaScript eBook">
+    <meta name="author" content="David Paul">
 </head>
 
 <body>
