--- a/eloquent-javascript.html
+++ b/eloquent-javascript.html
@@ -6,9 +6,14 @@
     <title>Eloquent JavaScript Exercises</title>
     <meta name="description" content="Exercises from the Eloquent JavaScript eBook">
     <meta name="author" content="David Paul">
+    <link rel="stylesheet" href="dist/css/eloquent.css">
 </head>
 
-<body>
+<body style="margin: 0">
+    <header style="height: 80px; background-color: #333">Header</header>
+    <div class="table-of-contents js-sticky" style="height: 200px">This is the table of contents</div>
+    <div style="float: left; height: 400px; background-color: #f00" class="js-sticky">Sticky thing</div>
+    <div style="float: right; position: relative; top: 100px; height: 800px; background-color: #000; color: white;" class="js-sticky">Sticky thing 2</div>
     <script src="dist/js/eloquent.js"></script>
 </body>
 </html>
