--- a/eloquent-javascript.html
+++ b/eloquent-javascript.html
@@ -9,11 +9,7 @@
     <link rel="stylesheet" href="dist/css/eloquent.css">
 </head>
 
-<body style="margin: 0">
-    <header style="height: 80px; background-color: #333">Header</header>
-    <div class="table-of-contents js-sticky" style="height: 200px">This is the table of contents</div>
-    <div style="float: left; height: 400px; background-color: #f00" class="js-sticky">Sticky thing</div>
-    <div style="float: right; position: relative; top: 100px; height: 800px; background-color: #000; color: white;" class="js-sticky">Sticky thing 2</div>
+<body>
     <script src="dist/js/eloquent.js"></script>
 </body>
 </html>
