Comments out css link

--- a/eloquent-javascript.html
+++ b/eloquent-javascript.html
@@ -6,7 +6,7 @@
     <title>Eloquent JavaScript Exercises</title>
     <meta name="description" content="Exercises from the Eloquent JavaScript eBook">
     <meta name="author" content="David Paul">
-    <link rel="stylesheet" href="dist/css/eloquent.css">
+    <!-- <link rel="stylesheet" href="dist/css/eloquent.css"> -->
 </head>
 
 <body>
