Adds css tasks and beings deep comparison

--- a/eloquent-javascript.html
+++ b/eloquent-javascript.html
@@ -6,10 +6,14 @@
     <title>Eloquent JavaScript Exercises</title>
     <meta name="description" content="Exercises from the Eloquent JavaScript eBook">
     <meta name="author" content="David Paul">
-    <!-- <link rel="stylesheet" href="dist/css/eloquent.css"> -->
+     <link rel="stylesheet" href="dist/css/eloquent-javascript.min.css"> 
 </head>
 
 <body>
+    <h1 class="screen-reader-text">Eloquent JavaScript</h1>
+    <div class="page">
+        <p class="page_promo">Check the console, it's full of all the shit.</p>
+    </div>
     <script src="dist/js/eloquent.js"></script>
 </body>
 </html>
